--- a/ToDo_ui/style.css
+++ b/ToDo_ui/style.css
@@ -153,14 +153,24 @@ body {
     padding: 25px 8px;
 }
 
-input[type="text"] {
+.input-text {
     width: 460px;
     height: 45px;
+    display: block;
+    margin-bottom: 8px;
     background: #FFFFFF;
     border: 1px solid #989898;
     border-radius: 6px;
-    padding: 12px;
-    margin-bottom: 8px;
+}
+
+input[type="text"] {
+    margin: 6px 8px 8px 8px;
+    width: 420px;
+    height: auto;
+    padding: 8px;
+    border: none;
+    padding-top: 8px;
+    outline: none;
 }
 
 label {
@@ -171,7 +181,7 @@ label:before {
     content: "";
     position: absolute;
     right: 10px;
-    top: 0;
+    top: 10px;
     bottom: 0;
     width: 20px;
     background: url("./assets/close-icon.svg") no-repeat;
@@ -208,7 +218,7 @@ h2 {
     background-color: rgb(255, 255, 255);
     border-radius: 50%;
     vertical-align: middle;
-    border: 1px solid #ddd;
+    border: 1px solid rgb(221, 221, 221);
     appearance: none;
     -webkit-appearance: none;
     outline: none;
@@ -216,20 +226,18 @@ h2 {
 }
 
 .checkbox-round:checked {
-    background-color: gray;
+    background-color: rgba(196, 196, 196, 1);
+    border: 2px solid rgb(255, 255, 255);
+    outline: 1px solid #998899;
+    ;
 }
 
 input[type="checkbox"] {
     position: absolute;
-    top: 12px;
+    top: 8px;
     left: 12px;
 }
 
 .checkbox:has(>.checkbox-round:checked) {
-    background-color: aqua;
+    background: linear-gradient(0deg, rgba(152, 152, 152, 0.3), hsla(0, 0%, 60%, 0.3)), linear-gradient(0deg, #F4F4F4, #F4F4F4);
 }
-
-
-/* .checkbox-round:checked~.checkbox {
-    background-color: aqua;
-} */
