--- a/weather/style.css
+++ b/weather/style.css
@@ -110,6 +110,12 @@
         font-size: 24px;
         line-height: 28px;
         margin: 0px 0px 15px 0px;
+        position: relative;
+    }
+    
+    p img {
+        position: absolute;
+        right: 20px;
     }
     
     h2 {
